<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_exercise1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="exercise"
            android:text="トレーニング1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_exercise2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="exercise"
            android:text="@string/exercise2"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_exercise3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="exercise"
            android:text="@string/exercise3"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_exercise4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="exercise"
            android:text="@string/exercise4"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_exercise5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="exercise"
            android:text="@string/exercise5"
            android:textSize="30sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:onClick="E_result"
        android:text="@string/btn_end_program"
        android:textSize="30sp" />

</RelativeLayout>